k8s/03-minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: model-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: minio/minio:latest
          args:
            - server
            - /data
            - --console-address
            - ":9001" # Для доступа к MinIO UI
          ports:
            - containerPort: 9000 # Порт для S3 API
            - containerPort: 9001 # Порт для консоли
          volumeMounts:
            - name: minio-data
              mountPath: /data
      volumes:
        - name: minio-data
          persistentVolumeClaim:
            claimName: minio-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: model-registry
spec:
  selector:
    app: minio
  ports:
    - name: api
      protocol: TCP
      port: 9000
      targetPort: 9000
    - name: console
      protocol: TCP
      port: 9001
      targetPort: 9001
  type: ClusterIP # Или NodePort/LoadBalancer для внешнего доступа к MinIO UI/API
