k8s/05-resource-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resource-manager
  namespace: model-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resource-manager
  template:
    metadata:
      labels:
        app: resource-manager
    spec:
      containers:
        - name: resource-manager
          image: k3d-ml-registry:5000/resource-manager:1.0.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: resource-manager
  namespace: model-registry
spec:
  selector:
    app: resource-manager
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
